--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
 @theme {
   --font-inter: "inter", "serif";
@@ -16,6 +17,6 @@
   }
 
   .menu-li {
-    @apply text-white text-2xl py-2 flex gap-11 items-center justify-between cursor-pointer;
+    @apply text-white text-2xl py-5 flex items-center justify-between cursor-pointer;
   }
 }
